--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -3,7 +3,7 @@
 }
 
 .nav-link-name {
-  font-family: Montserrat-Bold;
+  font-family: Montserrat-Bold, serif;
   color: #373737;
   line-height: 0.5rem;
   font-size: 1.375rem;
@@ -19,11 +19,3 @@ a, a:active {
   outline: 0;
   border: 0;
 }
-
-
-
-
-
-
-
-
