--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -41,19 +41,19 @@ input[type='radio']:checked:after,input[type='radio']:checked:before {
 }
 
 .badge-txt {
-  font-family: Montserrat-Bold;
+  font-family: Montserrat-Bold, serif;
   font-size: 1.125rem;
 }
 
 table {
-  font-family: Montserrat-Bold;
+  font-family: Montserrat-Bold, serif;
   color: #767d86;
   line-height: 1.75rem;
   font-size: 1.125rem;
 }
 
 table thead {
-  font-family: Montserrat-Regular;
+  font-family: Montserrat-Regular, serif;
   color: #767d86;
   line-height: 1.75rem;
   font-size: 1.125rem;
