--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,7 +5,7 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   height: 100%;
-  font-family: 'Cuprum', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #ebedf0!important
 }
 .wrapper {
@@ -103,13 +103,14 @@ app-charts {
   border: none!important;
   outline: none!important;
 }
-//.modal-content {
-//  margin-top: 160px;
-//}
-//.card-body.card-bg{
-//  padding-left: 400px;padding-top: 160px;
-//}
 
+.color-aqua {
+  background-color: #00b2a8;
+}
+
+.text-aqua {
+  color: #00b2a8;
+}
 
 fieldset {
   margin: 5px;
