--- a/frontend/src/app/components/profile/my-claims/my-claims.component.html
+++ b/frontend/src/app/components/profile/my-claims/my-claims.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-sm">
-    <br/>
-    <div class="input-group w-50">
-      <input type="text" class="form-control" placeholder="Поиск" id="mail" [(ngModel)]="text">
-      <div class="input-group-append">
-        <span class="input-group-text" (click)="findClaims(1)"><i aria-hidden="true" class="fa fa-search text-info"></i></span>
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text bg-transparent" (click)="findClaims(1)">
+          <i aria-hidden="true" class="fa fa-search text-info"></i></span>
       </div>
+      <input type="text" class="form-control search-input" placeholder="Поиск" id="mail" [(ngModel)]="text">
     </div>
     <br/>
 
-    <table class="table table-bordered table-sm">
+    <table class="table table-main-header table-sm">
       <thead class="text-center">
       <tr>
         <th>ID заявки</th>
