--- a/frontend/src/app/components/profile/profile.component.scss
+++ b/frontend/src/app/components/profile/profile.component.scss
@@ -1,34 +1,170 @@
-fieldset {
-  border: 1px solid #ddd !important;
-  margin: 0;
-  xmin-width: 0;
-  padding: 10px;
-  position: relative;
-  border-radius: 4px;
-  background-color: #f5f5f5;
-  padding-left: 10px !important;
-}
-
-legend {
-  font-size: 14px;
+.badge-info-id {
+  width: 10.625rem;
+  height: 2rem;
+  background-color: #00b2a8;
+  font-size: 1.125rem;
   font-weight: bold;
-  margin-bottom: 0px;
-  width: 35%;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px 5px 5px 10px;
-  background-color: #ffffff;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.56;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+  margin-left: -5px;
 }
 
-table.dataTable thead .sorting:after,
-table.dataTable thead .sorting:before,
-table.dataTable thead .sorting_asc:after,
-table.dataTable thead .sorting_asc:before,
-table.dataTable thead .sorting_asc_disabled:after,
-table.dataTable thead .sorting_asc_disabled:before,
-table.dataTable thead .sorting_desc:after,
-table.dataTable thead .sorting_desc:before,
-table.dataTable thead .sorting_desc_disabled:after,
-table.dataTable thead .sorting_desc_disabled:before {
-  bottom: .5em;
+.rounded-circle-ava {
+  width: 10rem;
+  height: 10rem;
+}
+
+.add-ava-btn {
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: #1473e6;
+  position: relative;
+  left: -1.75rem;
+  top: 4.8125rem;
+}
+
+.add-del-btn {
+  width: 2.5rem;
+  height: 2.5rem;
+  left: -13.5rem;
+  top: -2rem;
+  background-color: #1473e6;
+  position: relative;
+}
+
+.fullName-label {
+  max-font-size: 1.25rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.4;
+  letter-spacing: normal;
+  text-align: left;
+  color: #191919;
+}
+
+.speciality-label {
+  font-family: Montserrat, sans-serif;
+  max-font-size: 1.125rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.56;
+  letter-spacing: normal;
+  text-align: left;
+  color: #191919;
+}
+
+.profile-info-label {
+  max-font-size: 1.125rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.56;
+  letter-spacing: normal;
+  text-align: left;
+  color: #191919;
+}
+
+.last-sign-label {
+  font-size: 0.75rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.17;
+  letter-spacing: normal;
+  color: #191919;
+}
+
+.profile-icon {
+  height: 1.4375rem;
+  width: 1.4375rem;
+  color: black;
+}
+
+.profile-icon-delimiter {
+  max-width: 18.4375rem;
+  height: 0.0625rem;
+  background-color: #acacac;
+}
+
+.edit-button {
+  width: 14rem;
+}
+
+.table-column-header {
+    width: 8.875rem;
+    height: 1.0625rem;
+    font-size: 1rem;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.75;
+    letter-spacing: normal;
+    text-align: left;
+    color: #a0a8b4;
+}
+
+.table-column-value {
+  width: 16.9375rem;
+  height: 1.0625rem;
+  font-size: 1rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000000;
+}
+
+.table-blue-value {
+  width: 16.9375rem;
+  height: 1.0625rem;
+  font-size: 1rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: left;
+  color: #00b2a8;
+}
+
+.rieltor-raiting {
+  height: 57px;
+  margin: 0 -20px;
+  background-color: #00b2a8;
+}
+
+.rieltor-raiting-text {
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  letter-spacing: normal;
+  color: #f2f2f2;
+  text-align: center;
+  line-height: 54px;
+  padding: 0 10px;
+}
+
+.panel-header {
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.4;
+  letter-spacing: normal;
+  text-align: left;
+  color: #00b2a8;
+}
+
+.panel-header:active,.panel-header:focus,.panel-header:hover,.panel-header:before, .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  color: #00b2a8!important;
+  border-bottom: 1px solid #00b2a8;
 }
