--- a/frontend/src/app/helpers/create-claim-btn/create-claim-btn.component.html
+++ b/frontend/src/app/helpers/create-claim-btn/create-claim-btn.component.html
@@ -1,5 +1,5 @@
 <div class=" createClaimBtn" *ngIf="isShow()">
-  <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
-    class="fa fa-plus"></i>
+  <button type="button" class="btn color-aqua text-white btn-circle btn-xl" (click)="dnHref('create-claim')"><i
+    class="fa fa-plus fa-2x"></i>
   </button>
 </div>
