--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -55,9 +55,9 @@
             <div class="col-sm">
             </div>
             <div class="col-sm">
-              <button class="btn float-right btn-primary btn-block enter-btn" [disabled]="!this.loginForm.valid"
+              <button class="btn float-right color-aqua text-white btn-block enter-btn" [disabled]="!this.loginForm.valid"
                       (click)="login()">
-                Вход
+                Войти
               </button>
             </div>
             <div class="col-sm-2"></div>
