--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
@@ -9,7 +9,7 @@
               <div class="input-group ">
                 <input type="text" class="form-control" [value]="applicationId"
                        aria-describedby="basic-addon2" readonly>
-                <div class="input-group-append" *ngIf="hasUpdateRole()">
+                <div class="input-group-append" *ngIf="hasUpdateRole() && hasEditApplication()">
                   <button type="button" class="btn btn-sm btn-outline-primary m-0 px-3 py-2 z-depth-0 waves-effect" (click)="editApplication()">
                     <i class="fa fa-edit" aria-hidden="true"></i>
                   </button>
