--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -5,38 +5,38 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-sm">
-              <div class="card">
+              <div class="card card-agent">
                 <div class="view overlay">
                   <img class="card-img-top" src="assets/images/home/2.jpg"
                        alt="Card image cap">
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title" style="font-size: 16px">Агентские договора:</h5>
-                  <p class="font-weight-bold">{{'99999999' | mask: 'separator':','}} тг</p>
+                  <h5 class="card-title">Агентские договора:</h5>
+                  <p class="font-weight-bold disabled-bottom-margin">{{'99999999' | mask: 'separator':','}} тг</p>
                 </div>
               </div>
             </div>
             <div class="col-sm">
-              <div class="card">
+              <div class="card card-agent">
                 <div class="view overlay">
                   <img class="card-img-top" src="assets/images/home/3.jpg"
                        alt="Card image cap">
                 </div>
                 <div class="card-body">
                   <h5 class="card-title" style="font-size: 16px">Сумма задатков:</h5>
-                  <p class="font-weight-bold">{{'99999999' | mask: 'separator':','}} тг</p>
+                  <p class="font-weight-bold disabled-bottom-margin">{{'99999999' | mask: 'separator':','}} тг</p>
                 </div>
               </div>
             </div>
             <div class="col-sm">
-              <div class="card">
+              <div class="card card-agent">
                 <div class="view overlay">
                   <img class="card-img-top" src="assets/images/home/1.jpg"
                        alt="Card image cap">
                 </div>
                 <div class="card-body">
                   <h5 class="card-title" style="font-size: 16px">Сумма продаж:</h5>
-                  <p class="font-weight-bold">{{'99999999' | mask: 'separator':','}} тг</p>
+                  <p class="font-weight-bold disabled-bottom-margin">{{'99999999' | mask: 'separator':','}} тг</p>
                 </div>
               </div>
             </div>
