--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -58,3 +58,9 @@ table thead {
   line-height: 1.75rem;
   font-size: 1.125rem;
 }
+
+.card-agent {
+  font-size: 1rem;
+  min-height: 18.125rem;
+  max-height: 18.125rem;
+}
